--- a/区块链之以太坊开发环境搭建.md
+++ b/区块链之以太坊开发环境搭建.md
@@ -2,6 +2,8 @@
 
 本教程主要针对Debian和Ubuntu系统，实验环境为Debian8.6。
 
+在配置以太坊开发环境前要
+
 ### Node.js 环境配置
 
 Node.js是一个Javascript运行环境
@@ -33,8 +35,7 @@ Node.js是一个Javascript运行环境
 
 **安装节点仿真器**
 
-为了快速开发和测试以太坊 DApp，我们通常使用以太坊节点仿真器来模拟区块链，最流行的节点仿真器就是 Ganache。  
-
+为了快速开发和测试以太坊 DApp，我们通常使用以太坊节点仿真器来模拟区块链，最流行的节点仿真器就是 Ganache。
 
 > **1. 安装Ganache：**
 >
