Updates 1. 区块链之以太坊开发环境搭建.md
Auto commit by GitBook Editor

--- a/1. 区块链之以太坊开发环境搭建.md
+++ b/1. 区块链之以太坊开发环境搭建.md
@@ -2,7 +2,11 @@
 
 本教程主要针对Debian和Ubuntu系统，实验环境为Debian8.6。
 
-在配置以太坊开发环境前要
+在配置以太坊开发环境前要安装：git、gcc、make等工具。
+
+```
+$ sudo apt-get install git  build-essential
+```
 
 ### Node.js 环境配置
 
